Import Debian version 1.6.1
python-apt (1.6.1) unstable; urgency=medium

  * apt: Fix typing errors to get CI pass again
  * apt.Cache: Remap objects when reopening cache (LP: #1773316)
  * apt_pkg.DepCache: Raise CacheMismatchError if argument belongs to diff. cache
  * Set branch to 1.6.y and adjust travis CI to run against stable releases
  * travis CI / Dockerfile: Pin mypy to 0.600 to prevent future changes breaking CI
  * utils/get_debian_mirrors.py: Get data from salsa

python-apt (1.6.0) unstable; urgency=medium

  * Final release, no further changes.

python-apt (1.6.0~rc3) unstable; urgency=medium

  * Revert change to make apt.Cache subclass of dict
  * Fix get_changelog() to correctly decode non-unicode changelogs
  * Try to work around memory corruption in PackageRecords.*_hash
  * apt/auth.py: Protect against race with gpg when removing tmpdir
    (Closes: #871585)
  * Document Architecture: all handling in Package.{fullname,architecture()}
    (Closes: #863193)
  * python/tag.cc: Fix invalid read in TagFileNext
  * Raise ValueError if objects passed to DepCache are from different cache
    (LP: #1737441)
  * DepCache: Check that candidate we are setting belongs to package
  * debian/gbp.conf: Default branch is master now

python-apt (1.6.0~rc2) unstable; urgency=medium

  * Add some weird python3-distutils build-depends (Closes: #893837)
  * Document apt_pkg.SourceRecordsFile

python-apt (1.6.0~rc1) unstable; urgency=medium

  [ Michael Vogt ]
  * add info how to run the tests
  * Fix the remaining pep8 erorrs
  * README: add intro how to use python-apt with mypy
  * tests/old: update to py3
  * apt: make Version.fetch_binary() less noisy
  * README: make markdown and add info about building/testing
  * apt: add support for pep484 (type hints)
  * fix tests
  * python: add pkgsrcrecord.Files.{hashes,size,path,type} getters
  * python: stop using deprecated hash access (and drive by indent fixes)

  [ Julian Andres Klode ]
  * pkgsrcrecords: Fix off-by

--- a/debian/control
+++ b/debian/control
@@ -19,6 +19,7 @@ Build-Depends: apt (>= 1.0.9.4),
                python3-distutils | python3 (<< 3.6) | python3.6 (<< 3.6.4~rc1-2),
                python-distutils-extra (>= 2.0),
                python-sphinx (>= 0.5),
+               python3-sphinx,
                gnupg,
                dirmngr | gnupg (<< 2),
                pep8,
