--- a/debian/control
+++ b/debian/control
@@ -18,6 +18,7 @@ Build-Depends: apt (>= 1.0.9.4),
                python3-all-dbg (>= 3.3),
                python3-distutils | python3 (<< 3.6) | python3.6 (<< 3.6.4~rc1-2),
                python-distutils-extra (>= 2.0),
+               python3-distutils-extra,
                python-sphinx (>= 0.5),
                python3-sphinx,
                gnupg,
