--- a/debian/control
+++ b/debian/control
@@ -19,13 +19,12 @@ Build-Depends: apt (>= 1.0.9.4),
                python3-distutils | python3 (<< 3.6) | python3.6 (<< 3.6.4~rc1-2),
                python-distutils-extra (>= 2.0),
                python-sphinx (>= 0.5),
-               python3-sphinx,
                gnupg,
                dirmngr | gnupg (<< 2),
                pep8,
                pyflakes
-Vcs-Git: https://anonscm.debian.org/git/apt/python-apt.git
-Vcs-Browser: https://anonscm.debian.org/git/apt/python-apt.git
+Vcs-Git: https://salsa.debian.org/apt-team/python-apt.git
+Vcs-Browser: https://salsa.debian.org/apt-team/python-apt
 
 Package: python-apt
 Architecture: any
