Import Debian version 1.7.0~rc1+parrot1
python-apt (1.7.0~rc1+parrot1) testing; urgency=medium

  * Import new Debian release.

python-apt (1.7.0~rc1) unstable; urgency=medium

  * Release to unstable

python-apt (1.7.0~alpha3) experimental; urgency=medium

  * Fix __iter__ yielding different Packages than __getitem__
  * apt.Cache: Reinstate locks in a finally / run dpkg inside try
  * travis: Run tests on ubuntu:cosmic too
  * Revert "debian/control: Drop obsolete Python-Versions fields"
  * Accept Version objects in apt_pkg.Policy.get_priority(), deprecate Package
  * Return correct pin in apt.package.Version.policy_priority
  * typehinting: apt_pkg.PackageFile is not an iterable
  * Introduce frontend locking
  * Convert apt.Cache.commit and apt_pkg.DepCache.commit to FE lock

python-apt (1.7.0~alpha2) experimental; urgency=medium

  * gitlab-ci: Set DEBIAN_FRONTEND=noninteractive
  * Add more extensive test cases for cache remapping
  * Do not override __hash__ in apt.package.Package (LP: #1780099)
  * debian/python-apt.docs: README is README.md since some time
  * apt.Cache: Avoid unneccessary double weakref checks for __getitem__
  * apt.Cache: Use weakref.setdefault to find existing Package objects
  * debian/control: Point to salsa instead of anonscm
  * debian/control: Drop obsolete Python-Versions fields
  * Switch to python3-sphinx

python-apt (1.7.0~alpha1) experimental; urgency=medium

  [ Julian Andres Klode ]
  * data/templates/Ubuntu.info.in: Add cosmic cuttlefish template
  * apt.Cache: Fix error in apt.Package caching
  * apt: Correctly annotate Optional types
  * apt: Fix typing error related to apt_pkg
  * tests/test_pep484.py: Check everything
  * Correctly handle missing candidate in Package.get_changelog
  * types: Don't make apt_pkg.Cache a dict, and fix apt.Cache.__contains__
  * apt.package.Dependency: Fix __init__ type annotation
  * Add all possible annotations that were FIXME
  * Various type fixes
  * Fix some more type annotations for

--- a/debian/control
+++ b/debian/control
@@ -11,22 +11,20 @@ Build-Depends: apt (>= 1.0.9.4),
                debhelper (>= 9),
                dh-python,
                fakeroot,
-               libapt-pkg-dev (>= 1.4~beta3),
+               libapt-pkg-dev (>= 1.7~alpha2ubuntu1~),
                python-all-dev (>= 2.7),
                python-all-dbg,
                python3-all-dev (>= 3.3),
                python3-all-dbg (>= 3.3),
                python3-distutils | python3 (<< 3.6) | python3.6 (<< 3.6.4~rc1-2),
                python-distutils-extra (>= 2.0),
-               python3-distutils-extra,
-               python-sphinx (>= 0.5),
-               python3-sphinx,
+               python3-sphinx (>= 0.5),
                gnupg,
                dirmngr | gnupg (<< 2),
                pep8,
                pyflakes
-Vcs-Git: https://anonscm.debian.org/git/apt/python-apt.git
-Vcs-Browser: https://anonscm.debian.org/git/apt/python-apt.git
+Vcs-Git: https://salsa.debian.org/apt-team/python-apt.git
+Vcs-Browser: https://salsa.debian.org/apt-team/python-apt
 
 Package: python-apt
 Architecture: any
